--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -15,7 +15,7 @@ body {
 
 header {
   width: 100%;
-  height: 20vh;
+  height: 30vh;
   background: #552968;
   color: #fff;
   display: flex;
@@ -49,7 +49,7 @@ section {
 /*-- Weeks Section --*/
 section.weeks {
   position: relative;
-  padding: 50px;
+  padding: 20px;
   min-height: 200px;
 }
 
@@ -118,12 +118,19 @@ footer {
   padding: 20px;
 }
 
+footer p {
+  background: #552968;
+  color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+}
+
 footer a {
   text-decoration: none;
-  color: #552968;
+  color: #4a9d71;
   font-weight: bold;
 }
 
 footer a:hover {
-  color: #8b30b3;
+  color: #31cc79;
 }
