--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -18,9 +18,9 @@ header {
   height: 30vh;
   background: #552968;
   background-image: url('../images/banner.jpg');
-  background-position: center; 
-  background-repeat: no-repeat; 
-  background-size: cover; 
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #fff;
   display: flex;
   align-items: center;
@@ -47,6 +47,7 @@ header>p.date {
   font-weight: 400;
   letter-spacing: 0.5rem;
   background: #3d1e4b;
+  background-image: linear-gradient(#552968, #233f30);
   padding: 10px;
   border-radius: 10px;
   font-size: 0.8rem;
@@ -131,22 +132,56 @@ section.info>.info_container>div>span {
 footer {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   padding: 20px;
+
+  height: 350px;
+
+  background-image: linear-gradient(#552968, #233f30);
+  color: #fff;
+
+  position: relative;
+}
+
+footer>.btn {
+  padding: 10px;
+  outline: 0;
+  border: 0;
+  text-transform: uppercase;
+  border-radius: 10px;
+  cursor: pointer;
+  background: #0400fd;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  transition: 0.2s;
+}
+
+footer>.btn:hover {
+  background: #5d5be0;
 }
 
 footer p {
-  color: #000;
   padding: 20px;
   border-radius: 10px;
   transition: 0.2s;
 }
 
-footer a {
-  text-decoration: underline;
-  color: #0400fd;
-  font-weight: bold;
+footer>p.credits {
+  position: absolute;
+  bottom: 0;
 }
 
-footer a:hover {
-  color: #6c6aee;
+footer>p.credits>a {
+  color: #5dc58e;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+footer>p.credits>a:hover {
+  color: #4a9d71;
+  text-decoration: none;
 }
