--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -158,6 +158,7 @@ footer>.btn {
   text-decoration: none;
   font-size: 18px;
   transition: 0.2s;
+  animation: pulseShadow 2s infinite;
 }
 
 footer>.btn:hover {
@@ -184,4 +185,38 @@ footer>p.credits>a {
 footer>p.credits>a:hover {
   color: #4a9d71;
   text-decoration: none;
+}
+
+/*--------------------------------------------------------------
+# Pulse Class Animation and Keyframes
+--------------------------------------------------------------*/
+@-webkit-keyframes pulseShadow {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
+  }
+
+  70% {
+    -webkit-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+
+@keyframes pulseShadow {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
+  }
+
+  70% {
+    -moz-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
+  }
+
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+  }
 }
