--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -220,3 +220,15 @@ footer>p.credits>a:hover {
     box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
+
+
+@media (max-width: 500px)
+{
+  header {
+    width: 100%;
+    height: 50vh;
+  }
+  footer {
+    height: 500px;
+  }
+}
