--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,362 +1,362 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
-  background: #fff;
-  color: #000;
-  width: 100%;
+    background: #fff;
+    color: #000;
+    width: 100%;
 }
 
 header {
-  width: 100%;
-  height: 30vh;
-  background: #552968;
-  background-image: url("../images/banner.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 20px;
+    width: 100%;
+    height: 30vh;
+    background: #552968;
+    background-image: url('../images/banner.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 20px;
 }
 
 header > h1 {
-  text-align: center;
-  font-size: 1.8rem;
-  margin: 10px;
+    text-align: center;
+    font-size: 1.8rem;
+    margin: 10px;
 }
 
 header > p {
-  text-align: center;
-  color: #4a9d71;
-  font-weight: bold;
+    text-align: center;
+    color: #4a9d71;
+    font-weight: bold;
 }
 
 header > p.date {
-  color: #fff;
-  margin: 30px 0;
-  font-weight: 400;
-  letter-spacing: 0.5rem;
-  background: #3d1e4b;
-  background-image: linear-gradient(#552968, #233f30);
-  padding: 10px;
-  border-radius: 10px;
-  font-size: 0.8rem;
+    color: #fff;
+    margin: 30px 0;
+    font-weight: 400;
+    letter-spacing: 0.5rem;
+    background: #3d1e4b;
+    background-image: linear-gradient(#552968, #233f30);
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 0.8rem;
 }
 
 section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 /*-- Weeks Section --*/
 section.weeks {
-  position: relative;
-  padding: 20px;
-  min-height: 200px;
+    position: relative;
+    padding: 20px;
+    min-height: 200px;
 }
 
 section.weeks > h1 {
-  text-align: center;
-  margin: 0 0 20px;
+    text-align: center;
+    margin: 0 0 20px;
 }
 
 section.weeks > .weeks_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 section.weeks > .weeks_container > div {
-  background: #552968;
-  background-image: linear-gradient(#552968, #233f30);
-  padding: 20px;
-  border-radius: 10px;
-  color: #ffffff;
-  font-size: 28px;
-  margin: 10px;
-  text-align: center;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+    background: #552968;
+    background-image: linear-gradient(#552968, #233f30);
+    padding: 20px;
+    border-radius: 10px;
+    color: #ffffff;
+    font-size: 28px;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
 }
 
 section.weeks > .weeks_container > div > span {
-  color: #4a9d71;
-  font-weight: bold;
+    color: #4a9d71;
+    font-weight: bold;
 }
 
 /*-- Info Section --*/
 section.info {
-  position: relative;
-  padding: 50px;
-  min-height: 200px;
-  color: #000;
-  background: #e7e7e7;
+    position: relative;
+    padding: 50px;
+    min-height: 200px;
+    color: #000;
+    background: #e7e7e7;
 }
 
 section.info > h1 {
-  text-align: center;
-  margin: 0 0 20px;
+    text-align: center;
+    margin: 0 0 20px;
 }
 
 section.info > .info_container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 section.info > .info_container > div {
-  background: #3d1e4b;
-  background-image: linear-gradient(#552968, #233f30);
-  padding: 20px;
-  border-radius: 10px;
-  color: #fff;
-  font-size: 28px;
-  margin: 10px;
-  text-align: center;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
+    background: #3d1e4b;
+    background-image: linear-gradient(#552968, #233f30);
+    padding: 20px;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 28px;
+    margin: 10px;
+    text-align: center;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.8);
 }
 
 section.info > .info_container > div > span {
-  color: #4a9d71;
+    color: #4a9d71;
 }
 
 section.info > p.important {
-  font-size: 16px;
-  text-align: center;
-  margin: 10px 0;
+    font-size: 16px;
+    text-align: center;
+    margin: 10px 0;
 }
 
 /*-- Footer --*/
 footer {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
 
-  height: 350px;
+    height: 350px;
 
-  background-image: linear-gradient(#552968, #233f30);
-  color: #fff;
+    background-image: linear-gradient(#552968, #233f30);
+    color: #fff;
 
-  position: relative;
+    position: relative;
 }
 
 footer > .btn {
-  padding: 10px;
-  outline: 0;
-  border: 0;
-  text-transform: uppercase;
-  border-radius: 10px;
-  cursor: pointer;
-  background: #0400fd;
-  font-weight: bold;
-  color: #fff;
-  text-decoration: none;
-  font-size: 18px;
-  transition: 0.2s;
-  animation: pulseShadow 2s infinite;
+    padding: 10px;
+    outline: 0;
+    border: 0;
+    text-transform: uppercase;
+    border-radius: 10px;
+    cursor: pointer;
+    background: #0400fd;
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    transition: 0.2s;
+    animation: pulseShadow 2s infinite;
 }
 
 footer > .btn:hover {
-  background: #5d5be0;
+    background: #5d5be0;
 }
 
 footer p {
-  padding: 20px;
-  border-radius: 10px;
-  transition: 0.2s;
+    padding: 20px;
+    border-radius: 10px;
+    transition: 0.2s;
 }
 
 footer > p.credits {
-  position: absolute;
-  bottom: 0;
+    position: absolute;
+    bottom: 0;
 }
 
 footer > p.credits > a {
-  color: #5dc58e;
-  text-decoration: none;
-  transition: 0.2s;
+    color: #5dc58e;
+    text-decoration: none;
+    transition: 0.2s;
 }
 
 footer > p.credits > a:hover {
-  color: #4a9d71;
-  text-decoration: none;
+    color: #4a9d71;
+    text-decoration: none;
 }
 
 /*--------------------------------------------------------------
 # Pulse Class Animation and Keyframes
 --------------------------------------------------------------*/
 @-webkit-keyframes pulseShadow {
-  0% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
-  }
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
+    }
 
-  70% {
-    -webkit-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
-  }
+    70% {
+        -webkit-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
+    }
 
-  100% {
-    -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
 }
 
 @keyframes pulseShadow {
-  0% {
-    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
-  }
+    0% {
+        -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.35);
+    }
 
-  70% {
-    -moz-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
-  }
+    70% {
+        -moz-box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 15px rgba(255, 255, 255, 0);
+    }
 
-  100% {
-    -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-    box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
-  }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
 }
 
 @media (max-width: 500px) {
-  header {
-    width: 100%;
-    height: 50vh;
-  }
-  footer {
-    height: 500px;
-  }
-  header > p.date {
-    font-size: 0.5rem;
-  }
+    header {
+        width: 100%;
+        height: 50vh;
+    }
+    footer {
+        height: 500px;
+    }
+    header > p.date {
+        font-size: 0.5rem;
+    }
 }
 
 /*--------------------------------------------------------------
 # basic modal style
 --------------------------------------------------------------*/
 .modal_fundo {
-  height: 100%;
-  width: 100%;
+    height: 100%;
+    width: 100%;
 
-  background: rgb(0, 0, 0, 0.7);
-  position: fixed;
-  visibility: hidden;
-  z-index: 999;
+    background: rgb(0, 0, 0, 0.7);
+    position: fixed;
+    visibility: hidden;
+    z-index: 999;
 }
 
 .modal_fundo > .close {
-  position: absolute;
-  top: 20px;
-  right: 15px;
-  padding: 10px;
-  border-radius: 10px;
-  background: #b650e2;
-  color: #fff;
-  border: 2px solid #000;
-  cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 15px;
+    padding: 10px;
+    border-radius: 10px;
+    background: #b650e2;
+    color: #fff;
+    border: 2px solid #000;
+    cursor: pointer;
 }
 
 .modal_container {
-  position: fixed;
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
-  transition: 0.2s;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+    transition: 0.2s;
 
-  z-index: 999;
+    z-index: 999;
 }
 
 .modal_container > .modal {
-  background: #fff;
-  box-shadow: 0 0 20px #000;
-  height: relative;
-  max-height: 715px;
-  padding: 20px;
+    background: #fff;
+    box-shadow: 0 0 20px #000;
+    height: relative;
+    max-height: 715px;
+    padding: 20px;
 
-  width: 95%;
-  max-width: 718px;
-  border-radius: 20px;
+    width: 95%;
+    max-width: 718px;
+    border-radius: 20px;
 
-  position: relative;
+    position: relative;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal_container > .modal h1 {
-  font-size: 1.5rem;
-  color: #552968;
-  margin-bottom: 20px;
+    font-size: 1.5rem;
+    color: #552968;
+    margin-bottom: 20px;
 }
 
 .modal_container > .modal > .container {
-  height: 95%;
-  width: 95%;
-  overflow: auto;
-  padding: 15px;
+    height: 95%;
+    width: 95%;
+    overflow: auto;
+    padding: 15px;
 }
 
 .modal_container > .modal p {
-  margin: 20px 0 20px;
+    margin: 20px 0 20px;
 }
 
 .modal_container > .modal img {
-  min-width: 100%;
-  max-width: 600px;
-  height: 100%;
-  max-height: 400px;
-  border-radius: 10px;
-  margin: 0 0 20px;
+    min-width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 400px;
+    border-radius: 10px;
+    margin: 0 0 20px;
 }
 
 /* width */
 .modal_container ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 /* Track */
 .modal_container ::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 10px;
+    background: #f1f1f1;
+    border-radius: 10px;
 }
 
 /* Handle */
 .modal_container ::-webkit-scrollbar-thumb {
-  background: rgb(126, 126, 126);
-  border-radius: 10px;
+    background: rgb(126, 126, 126);
+    border-radius: 10px;
 }
 
 /* Handle on hover */
 .modal_container ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: #555;
 }
 
 @media (max-width: 600px) {
-  .modal_container > .modal {
-    padding: 10px;
-  }
-  .modal_container > .modal img {
-    max-width: 100%;
-  }
-  .modal_container > .modal h1 {
-    font-size: 1.1rem;
-  }
+    .modal_container > .modal {
+        padding: 10px;
+    }
+    .modal_container > .modal img {
+        max-width: 100%;
+    }
+    .modal_container > .modal h1 {
+        font-size: 1.1rem;
+    }
 }
