--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -287,7 +287,6 @@ footer > p.credits > a:hover {
     background: #fff;
     box-shadow: 0 0 20px #000;
     height: relative;
-    max-height: 715px;
     padding: 20px;
 
     width: 95%;
@@ -299,6 +298,8 @@ footer > p.credits > a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transform: scale(0.9);
 }
 
 .modal_container > .modal h1 {
@@ -322,7 +323,7 @@ footer > p.credits > a:hover {
     min-width: 100%;
     max-width: 600px;
     height: 100%;
-    max-height: 400px;
+
     border-radius: 10px;
     margin: 0 0 20px;
 }
